# intel-ai-corebuilder

./: LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml
src/: App.css  App.jsx
src-tauri/: 2  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  superbuilder.rs
src-tauri/src/proto/: superbuilder.proto
src/components/appBar/: AppBar.jsx
src/components/settings/: Settings.jsx
src/components/sideBar/: SideBar.jsx
src/components/statusBar/: StatusBar.jsx
src/pages/chat/: Chat.jsx
src/pages/knowledgeBase/: KnowledgeBase.jsx
src/pages/model/: Model.jsx
src/stores/: AppStore.jsx  ChatStore.jsx  KBStore.jsx  KnowledgeStore.jsx  ModelStore.jsx  SuperbuilderStore.jsx  UIStores.jsx
src/utils/: dateCheck.jsx  modelCheck.jsx  nextSidCheck.jsx
