[package]
name = "intel-superbuilder-core"
version = "0.1.0"
description = "A redesigned UI for Intel AI Assistant Builder a.k.a. Superbuilder"
authors = ["zhengchy95"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "intel_superbuilder_core_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.12"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
futures = "0.3"
sysinfo = { version = "0.35", features = [] }

# username
whoami = "1.2"

# grpc
tonic = "0.12"
tokio = { version = "1.0", features = ["full"] }
prost = "0.13"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

